--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  http: ^1.2.0
 
-dev_dependencies:
+dev_depenfdencies:
   flutter_test:
     sdk: flutter
 
